[TASK] Home, Overview & Contact in vue frontend

--- a/app/vue/index.html
+++ b/app/vue/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="https://use.fontawesome.com/64d3cadbb4.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
+    <link href="src/assets/css/main.css" type="text/css" rel="stylesheet">
     <title>vue</title>
   </head>
   <body>
