--- a/app/vue/index.html
+++ b/app/vue/index.html
@@ -6,7 +6,7 @@
     <script src="https://use.fontawesome.com/64d3cadbb4.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
     <link href="src/assets/css/main.css" type="text/css" rel="stylesheet">
-    <title>vue</title>
+    <title>Interactive Wall</title>
   </head>
   <body>
     <div id="app"></div>
