--- a/app/style-guide/index.html
+++ b/app/style-guide/index.html
@@ -7,6 +7,8 @@
 	</head>
 	<body>
 		<main>
+			<h1>Style Guide</h1>
+
 			<h4>Logo</h4>
 			<img src="assets/logo.png">
 
@@ -43,10 +45,12 @@
 			<p>Doorlopende tekst heeft een lettergrootte van 16px, line-height 150%, de tekenkleur is #313133 en het lettertype is Lato in Regular</p>
 
 			<h4>Knoppen</h4>
-			<p>Primaire knop</p>
 			<button class="button">BUTTON</button>
 			<button class="hover">HOVER</button>
 			<button class="disabled">DISABLED</button>
+
+			<h4>Inputs</h4>
+			<input type="text" placeholder="Placeholder">
 		</main>
 	</body>
 </html>
