--- a/app/vue/index.html
+++ b/app/vue/index.html
@@ -6,6 +6,7 @@
     <script src="https://use.fontawesome.com/64d3cadbb4.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
     <title>Interactive Wall</title>
+    <link rel="shortcut icon" href="/static/favicon.png" type="image/png">
   </head>
   <body>
     <div id="app"></div>
